# biov

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
docs/: index.md
docs/guides/: configuration.md
guides/configuration/: index.html
reference/SUMMARY/: index.html
reference/biov/: index.html
reference/biov/config/: index.html
reference/biov/dataframe/: index.html
reference/biov/executables/: index.html
reference/biov/io/: index.html
reference/biov/io/fastx/: index.html
reference/biov/io/gff/: index.html
reference/biov/seq/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/biov/: __init__.py  _patch.py  config.py  dataframe.py  gff.py  seq.py  types.py
src/biov/executables/: __init__.py  _blat.py
src/biov/io/: __init__.py  _preprocess.py  fastx.py  gff.py
tests/: test_gff.py  test_seq.py  test_types.py
